--- a/asset/styles/style.css
+++ b/asset/styles/style.css
@@ -2,6 +2,11 @@
     margin: 0;
 }
 
+body {
+    width: 100%;
+    height: auto;
+}
+
 header {
     width: 100%;
     display: flex;
@@ -37,45 +42,61 @@ header li a:hover {
     color: #ffffff;
 }
 
-article h1 {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    letter-spacing: -2px;
-    align-self: center;
-}
-
-section {
-    height: 90vh;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-main {
-    width: 100%;
-    height: auto;
-}
-
 article {
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+
+article h1 {
+    margin-top: 1%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 section {
-    width: 100%;
+    border: 1px solid yellow;
+    border-radius: 10px;
+    box-shadow: #000 1px 1px 20px 0px;
+    background-color: antiquewhite;
+    padding: 1%;
+    margin: 1%;
+    width: 90%;
+    height: auto;
     display: flex;
     flex-direction: row;
-    align-items: center;
-    flex-wrap: wrap;
 }
 
-section img {
-    margin: 1%;
-    width: 50%;
-    height: 70%;
+.img-section {
+    width: 30%;
+    margin: 0% 1%;
 }
 
 .texte {
-    width: 50%;
+    margin-left: 10%;
+    width: 40%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+}
+
+
+.texte p {
+    font-size: 0.9rem;
+    margin: 3% 0%;
+}
+
+.texte a {
+    background-color: aquamarine;
+    border-radius: 10px;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    text-shadow: 1px 1px 2px pink;
+}
+
+.texte a:hover {
+    box-shadow: #000 1px 1px 10px 0px;
 }
 
 footer {
@@ -93,4 +114,52 @@ footer p {
     color: #000;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1rem;
+}
+
+@media screen and (max-width: 1200px) {
+
+    section {
+        flex-direction: column;
+    }
+
+    .img-section {
+        margin: 0;
+        width: auto;
+        align-self: center;
+    }
+
+    .texte {
+        margin: 0% 20%;
+        width: auto;
+        align-self: center;
+    }
+
+}
+
+@media screen and (max-width: 500px) {
+    header li a {
+        font-size: 1.25rem;
+    }
+
+    .img-section img {
+        width: 60%;
+    }
+
+    .img-section {
+        display: flex;
+        justify-content: center;
+    }
+
+    .texte h2,
+    .texte a {
+        font-size: 0.8rem;
+    }
+
+    .texte p {
+        font-size: 0.6rem;
+    }
+
+    article h1 {
+        font-size: 1rem;
+    }
 }
