Ajout des commentaire

--- a/asset/styles/style.css
+++ b/asset/styles/style.css
@@ -7,6 +7,7 @@ body {
     height: auto;
 }
 
+/* Reglage de la taille du header */
 header {
     width: 100%;
     display: flex;
@@ -15,10 +16,12 @@ header {
     background: radial-gradient(rgb(126, 1, 126), transparent);
 }
 
+/* La nav prend toute la largueur */
 header nav {
     width: 100%;
 }
 
+/* on fait du flexbox pour aligner les liens */
 header ul {
     display: flex;
     flex-direction: row;
@@ -30,6 +33,7 @@ header li {
     list-style: none;
 }
 
+/* Décoration des liens */
 header li a {
     color: #000;
     text-decoration: none;
@@ -42,6 +46,7 @@ header li a:hover {
     color: #ffffff;
 }
 
+/* on fait du flex sur les article en colonne pour mettre le titre en haut */
 article {
     display: flex;
     flex-direction: column;
@@ -53,6 +58,7 @@ article h1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+/* on fait des boites pour chaque section avec de la marge et on mets ses enfant en flex */
 section {
     border: 1px solid yellow;
     border-radius: 10px;
@@ -66,11 +72,13 @@ section {
     flex-direction: row;
 }
 
+/* Définition de la taille de l'image avec de la marge  */
 .img-section {
     width: 30%;
     margin: 0% 1%;
 }
 
+/* décoration du texte de description et flexbox en colonne avec un centrage. */
 .texte {
     margin-left: 10%;
     width: 40%;
@@ -80,7 +88,7 @@ section {
     justify-content: center;
 }
 
-
+/* décoration des textes et des liens */
 .texte p {
     font-size: 0.9rem;
     margin: 3% 0%;
@@ -99,6 +107,7 @@ section {
     box-shadow: #000 1px 1px 10px 0px;
 }
 
+/* Définition du footer avec un flex pour ces enfant */
 footer {
     min-height: 10vh;
     width: 100%;
@@ -109,6 +118,7 @@ footer {
     background: radial-gradient(rgb(126, 1, 126), transparent);
 }
 
+/* Décoration du texte */
 footer p {
     text-shadow: rgb(0, 0, 0) 1px 0 10px;
     color: #000;
@@ -116,6 +126,7 @@ footer p {
     font-size: 1rem;
 }
 
+/* Mediaqueries pour les tablettes */
 @media screen and (max-width: 1200px) {
 
     section {
@@ -136,6 +147,7 @@ footer p {
 
 }
 
+/* Mediaqueries pour les téléphones */
 @media screen and (max-width: 500px) {
     header li a {
         font-size: 1.25rem;
